--- a/themes/openemr/assets/scss/_variables.scss
+++ b/themes/openemr/assets/scss/_variables.scss
@@ -108,7 +108,7 @@ $colors: (
 );
 
 $theme-colors: (
-  primary: $blue,
+  primary: hsl(217, 100, 21),
   secondary: $gray-600,
   success: $green,
   info: $cyan,
