--- a/themes/openemr/layouts/partials/homepage/billboard-card.html
+++ b/themes/openemr/layouts/partials/homepage/billboard-card.html
@@ -1,7 +1,7 @@
-<div class="target_nav col-sm-12 col-md-6 col-lg-3 pb-3 card-holders">
-  <div class="card {{ .classes.card }}">
+<div class="target_nav col pb-3 card-holders">
+  <div class="card h-100 {{ .classes.card }}">
     <a href="{{ .url }}">
-      <span class="card-body d-flex flex-column">
+      <span class="card-body text-center d-flex flex-column">
         {{ with .image }}<img src="{{ . }}" width="64" class="mx-auto" alt="">{{ end }}
         <div>
           <h4>{{ .title }}</h4>
