--- a/themes/openemr/layouts/partials/homepage/billboard.html
+++ b/themes/openemr/layouts/partials/homepage/billboard.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="content">
       <div class="row">
-        <div class="col-sm-12 col-lg-12 pb-5">
-          <h1 class="display-4 text-white text-center mb-4">{{- .Title | safeHTML -}}</h1>
-          {{- with .Params.subtitle -}}<p class="h3 text-center pt-3 mb-5">{{- . -}}</p>{{- end -}}
+        <div class="col-sm-12 col-lg-12">
+          <h1 class="display-4 text-white text-center introduce_text">{{- .Title | safeHTML -}}</h1>
+          {{- with .Params.subtitle -}}<p class="h3 text-center pt-3 mb-2">{{- . -}}</p>{{- end -}}
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-3 mb-3">
       {{- range .Params.billboard.cards -}}
         {{- partial "homepage/billboard-card" . -}}
       {{- end -}}
