Fix: broken Footer link
    - Corrects an issue where footer links were relative, causing incorrect URLs when navigating to the same page multiple times. This change ensures all footer links are absolute, providing a consistent user experience.
        - suggestion : Correct typo in the `dev` script in `package.json` from `--baseUrl` to `--baseURL`, if the Hugo failed to build

--- a/themes/openemr/layouts/partials/menu.html
+++ b/themes/openemr/layouts/partials/menu.html
@@ -25,7 +25,7 @@
 {{- define "partials/inline/menu/walk.html" }}
   {{- $page := .page }}
   {{- range .menuEntries }}
-    {{- $attrs := dict "href" .URL }}
+    {{- $attrs := dict "href" (absURL .URL) }}
     {{- if $page.IsMenuCurrent .Menu . }}
       {{- $attrs = merge $attrs (dict "class" "active" "aria-current" "page") }}
     {{- else if $page.HasMenuCurrent .Menu .}}
